fix alignment bug

--- a/style/less/filter-message.less
+++ b/style/less/filter-message.less
@@ -79,7 +79,7 @@
 .step-progress {
   @height: 30px;
   height: @height;
-  width: 90%;
+  width: 1215px;
   margin: 0 auto;
   margin-bottom: 30px;
   .progress-list {
